--- a/components/layout/header/header.css
+++ b/components/layout/header/header.css
@@ -104,7 +104,7 @@
 @media (min-width: 1025px) {
     .nav {
         display: flex;
-        padding-left: 4rem;
+        padding-left: 1.5rem;
     }
 }
 
@@ -1041,6 +1041,17 @@
 
     .mega-menu-inner {
         grid-template-columns: 260px 1fr 260px;
+    }
+
+    /* Tighten nav for smaller desktops */
+    .nav-link {
+        padding: 0.4rem 0.5rem;
+        font-size: 0.8125rem;
+    }
+
+    .nav {
+        gap: 0.125rem;
+        padding-left: 1rem;
     }
 }
 
